# distributed-sys-final

./: README.md
deployment/: backend.yml  frontend.yml  hpa.yml  ingress.yml  service.yml
final_project_backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
final_project_backend/app/: database.py  main.py  models.py  schemas.py
final_project_backend/app/api/: dependencies.py
final_project_backend/app/api/core/: config.py  exceptions.py  security.py
final_project_backend/app/api/endpoints/: auth.py  checkin.py  team.py
final_project_frontend/: Dockerfile  README.md  package-lock.json  package.json
final_project_frontend/public/: index.html
final_project_frontend/src/: App.jsx  config.js
final_project_frontend/src/components/: CheckInForm.jsx  Leaderboard.jsx  LoginForm.jsx  Navbar.jsx  PrivateRoute.jsx  RegisterForm.jsx  TeamForm.jsx
final_project_frontend/src/services/: auth.js  axios.js  checkins.js  index.js  team.js
k6_load_test/: README.md  checkin_load_tesing.html  final_test_no_MQ.html  reg-v10-itr2000-d20m.html  reg-v10-itr2000-d20m_register.html  v10-itr1000-d20m_create_teams.html  v10-itr2000-d40m_join_and_checkin.html
k6_load_test/data/: login_results.json  team_info.json  user_data.json
k6_load_test/scripts/: add_team_id.py  create_team.py  create_team_info.py  create_teams_test.js  join_and_checkin_test.js  user-login.py  user-registration.py  user-registration_test.js
sql-backup/: README.md  schema.sql
